// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<URLMetaPreview /> should render 1`] = `
<div
  className="url-meta-preview"
>
  <div
    className="row h-100"
  >
    <div
      className="col-4 pr-0"
    >
      <div
        className="url-meta-preview__image"
        style={
          Object {
            "backgroundImage": "url(https://ichef.bbci.co.uk/news/1024/branded_news/81C6/production/_98022233_gettyimages-842414672-1.jpg)",
          }
        }
      />
    </div>
    <div
      className="col-8 pl-0"
    >
      <div
        className="url-meta-preview__main"
      >
        <a
          className="url-meta-preview__title"
          href="https://www.bbc.co.uk/news/business-45242008"
          rel="noopener noreferrer"
          target="_blank"
        >
          <Responsive(LinesEllipsis)
            basedOn="words"
            ellipsis="..."
            innerRef={[Function]}
            maxLine={2}
            text="National Living Wage 'fails to cover families' basic needs"
          />
        </a>
        <Responsive(LinesEllipsis)
          basedOn="words"
          className="url-meta-preview__description"
          ellipsis="..."
          innerRef={[Function]}
          maxLine={3}
          text="Low-paid parents working full-time do not earn enough to meet their families' needs, a charity says."
        />
        <a
          className="url-meta-preview__url"
          href="https://www.bbc.co.uk/news/business-45242008"
          rel="noopener noreferrer"
          target="_blank"
        >
          bbc.co.uk/news/business-45242008
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<URLMetaPreview /> should render in vertical mode 1`] = `
<div
  className="url-meta-preview"
>
  <div
    className=""
  >
    <div
      className=""
    >
      <div
        className="url-meta-preview__image"
        style={
          Object {
            "backgroundImage": "url(https://ichef.bbci.co.uk/news/1024/branded_news/81C6/production/_98022233_gettyimages-842414672-1.jpg)",
          }
        }
      >
        <img
          alt=""
          src="https://ichef.bbci.co.uk/news/1024/branded_news/81C6/production/_98022233_gettyimages-842414672-1.jpg"
        />
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="url-meta-preview__main"
      >
        <a
          className="url-meta-preview__title"
          href="https://www.bbc.co.uk/news/business-45242008"
          rel="noopener noreferrer"
          target="_blank"
        >
          <Responsive(LinesEllipsis)
            basedOn="words"
            ellipsis="..."
            innerRef={[Function]}
            maxLine={2}
            text="National Living Wage 'fails to cover families' basic needs"
          />
        </a>
        <Responsive(LinesEllipsis)
          basedOn="words"
          className="url-meta-preview__description"
          ellipsis="..."
          innerRef={[Function]}
          maxLine={3}
          text="Low-paid parents working full-time do not earn enough to meet their families' needs, a charity says."
        />
        <a
          className="url-meta-preview__url"
          href="https://www.bbc.co.uk/news/business-45242008"
          rel="noopener noreferrer"
          target="_blank"
        >
          bbc.co.uk/news/business-45242008
        </a>
      </div>
    </div>
  </div>
</div>
`;
